--- a/Cusrim/Views/Faculty/ViewStudents.cshtml
+++ b/Cusrim/Views/Faculty/ViewStudents.cshtml
@@ -44,7 +44,7 @@
                         @if (student.FacultyId == null)
                         {
                             <div class="pull-left">
-                                @Html.ActionLink("Attach", "Attach", "Faculty", new { id = student.Id }, new { @class = "fa fa-pencil table_extra" })
+                                @Html.ActionLink(" ", "StudentDetails", "Admin", new { id = student.Id }, new { @class = "fa fa-eye table_extra" })
                             </div>
                         }
 
