--- a/Cusrim/Views/Admin/Index.cshtml
+++ b/Cusrim/Views/Admin/Index.cshtml
@@ -66,11 +66,11 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            @Html.ActionLink("View All", "ViewStudent", "Admin", new { @class = " table_extra btn btn-primary w-100" })
+                            @Html.ActionLink("View All", "ViewStudent", "Admin", new { @class = " table_extra btn btn-primary w-100 text-white " })
 
                         </div>
                         <div class="col-md-6">
-                            <a data-toggle="modal" data-target="#studentForm" class="btn btn-primary text-white mt-5 ">Add Student</a>
+                            <a data-toggle="modal" data-target="#studentForm" class="btn btn-primary text-white w-100 ">Add Student</a>
 
 
                         </div>
@@ -167,7 +167,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            @Html.ActionLink("View All", "ViewFaculty", "Admin", new { @class = "fa fa-eye table_extra btn btn-primary w-100" })
+                            @Html.ActionLink("View All", "ViewFaculty", "Admin", new { @class = " table_extra btn btn-primary w-100" })
 
                         </div>
                         <div class="col-md-6">
