--- a/Cusrim/Views/Home/Index.cshtml
+++ b/Cusrim/Views/Home/Index.cshtml
@@ -357,7 +357,7 @@
                     <img class="mb-4" src="~/Images/cap.png" alt="" width="72" height="72">
                     <h1 class="h3 mb-3 font-weight-normal">WELCOME BACK</h1>
                     <label for="inputEmail" class="sr-only">Email address</label>
-                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Enter Staff ID", required = "required" })
+                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Enter User ID", required = "required" })
 
 
                     @*<input type="email" id="inputEmail" class="form-control" placeholder="Matric Number" required autofocus>*@
@@ -368,7 +368,6 @@
                     <div class="checkbox mb-3">
                         @Html.AntiForgeryToken()
                         <button class="btn w-75 text-center align_center btn-block bg_yellow" type="submit">Sign in</button>
-                        @Html.ActionLink("SignUp", "Register", "Faculty")
                     </div>
 
 
@@ -408,7 +407,6 @@
                     <div class="checkbox mb-3">
                         @Html.AntiForgeryToken()
                         <button class="btn w-75 text-center align_center btn-block bg_yellow" type="submit">Sign in</button>
-                        @Html.ActionLink("SignUp", "Register", "Student")
                     </div>
 
 
