--- a/Cusrim/Views/Navbar.cshtml
+++ b/Cusrim/Views/Navbar.cshtml
@@ -1,16 +1,39 @@
 ﻿
-<div class="d-flex flex-column flex-md-row align-items-center  px-md-4 mb-3 bg_lightblue border-bottom shadow-sm " , style="height:100px;">
-    <span> <img src="~/Images/cap.png" class="small_img  mr-3" /></span>
-    <h3 class="my-0 mr-md-auto font-weight-normal">CUSRiM</h3>
-    <nav class="my-2 my-md-0 mr-md-3">
-        Welcome  @Session["Username"]
+    <div class="d-flex flex-column flex-md-row align-items-center  px-md-4 mb-3 bg_lightblue border-bottom shadow-sm " , style="height:100px;">
+        <span> <img src="~/Images/cap.png" class="small_img  mr-3" /></span>
 
-        @Html.ActionLink("SignOut", "LogOut", "User")
+        @if (Session["Role"].ToString() == "admin")
+        {
+            <a href="@Url.Action("index", "Admin")" class="logo bg-blue-gradient my-0 mr-md-auto font-weight-normal">
+                <h3 class="my-0 mr-md-auto font-weight-normal">CUSRiM</h3>
+            </a>
+
+        }
+
+        @if (Session["Role"].ToString() == "faculty")
+        {
+            <a href="@Url.Action("Dashboard", "faculty")" class="logo bg-blue-gradient my-0 mr-md-auto font-weight-normal">
+                <h3 class="my-0 mr-md-auto font-weight-normal">CUSRiM</h3>
+            </a>
+
+        }
+        @if (Session["Role"].ToString() == "student")
+        {
+            <a href="@Url.Action("Dashboard", "student")" class="logo bg-blue-gradient my-0 mr-md-auto font-weight-normal">
+                <h3 class="my-0 mr-md-auto font-weight-normal">CUSRiM</h3>
+            </a>
+
+        }
+
+        <nav class="my-2 my-md-0 mr-md-3">
+            Welcome  @Session["Username"]
+
+            @Html.ActionLink("SignOut", "LogOut", "User")
 
 
-    </nav>
+        </nav>
 
-    @*<a class="btn btn-outline-primary" href="#">Sign up</a>*@
-</div>
+        @*<a class="btn btn-outline-primary" href="#">Sign up</a>*@
+    </div>
 
 
