--- a/Cusrim/Views/Faculty/ViewAttached.cshtml
+++ b/Cusrim/Views/Faculty/ViewAttached.cshtml
@@ -8,7 +8,7 @@
 
 @if (TempData["message"] != null)
 {
-    <div class=" alert alert-danger">
+    <div class=" alert alert-success">
         <strong>@TempData["message"]</strong>
     </div>
 }
