--- a/Cusrim/Views/Home/Index.cshtml
+++ b/Cusrim/Views/Home/Index.cshtml
@@ -17,8 +17,7 @@
 
 
     </nav>
-    <a class="text-dark btn btn-outline-primary  br_10 mr-4" data-toggle="modal" data-target="#login" href="#"> <b style="color:#6198CE">Faculty</b> </a>
-    <a class=" text-dark btn btn-outline-primary br_10" data-toggle="modal" data-target="#loginStudent" href="#"> <b style="color:#6198CE">Student</b></a>
+    <a class="text-dark btn btn-outline-primary  br_10 mr-4" data-toggle="modal" data-target="#login" href="#"> <b style="color:#6198CE">Login</b> </a>
     @*<a class="btn btn-outline-primary" href="#">Sign up</a>*@
 </div>
 
@@ -342,7 +341,6 @@
 </section>
 
 
-
 <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -359,7 +357,7 @@
                     <img class="mb-4" src="~/Images/cap.png" alt="" width="72" height="72">
                     <h1 class="h3 mb-3 font-weight-bold">WELCOME BACK</h1>
                     <label for="inputEmail" class="sr-only">Email address</label>
-                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Enter Staff ID", required = "required" })
+                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Enter User ID", required = "required" })
 
 
                     @*<input type="email" id="inputEmail" class="form-control" placeholder="Matric Number" required autofocus>*@
@@ -370,7 +368,6 @@
                     <div class="checkbox mb-3">
                         @Html.AntiForgeryToken()
                         <button class="btn w-75 text-center align_center btn-block bg_yellow" type="submit">Login</button>
-                        @Html.ActionLink("Register", "Register", "Faculty")
                     </div>
 
 
@@ -382,44 +379,3 @@
         </div>
     </div>
 </div>
-
-<div class="modal fade" id="loginStudent" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body text-center">
-
-                @using (Html.BeginForm("AuthenticateUser", "User", FormMethod.Post, new { @class = "form-signin" }))
-
-                {
-                    <img class="mb-4" src="~/Images/cap.png" alt="" width="72" height="72">
-                    <h1 class="h3 mb-3 font-weight-normal">WELCOME BACK</h1>
-                    <label for="inputEmail" class="sr-only">Email address</label>
-                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Matric Number", required = "required", type = "email" })
-
-                    @*<input type="email" id="inputEmail" class="form-control" placeholder="Matric Number" required autofocus>*@
-                    <label for="inputPassword" class="sr-only">Password</label>
-                    @Html.PasswordFor(m => m.password, new { @class = "form-control", placeholder = "password", required = "required" })
-
-                    @*<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>*@
-                    <div class="checkbox mb-3">
-                        @Html.AntiForgeryToken()
-                        <button class="btn w-75 text-center align_center btn-block bg_yellow" type="submit">Login</button>
-                        @Html.ActionLink("Register", "Register", "Student")
-                    </div>
-
-
-                }
-
-
-            </div>
-
-        </div>
-    </div>
-</div>
-
